--- a/_posts/2018-04-01-Tails.md
+++ b/_posts/2018-04-01-Tails.md
@@ -1,10 +1,6 @@
 ---
 title: "Tails (The Amnesic Incognito Live System)"
-categories:
-  - Post Formats
-tags:
-  - chat
-  - Post Formats
+author: P4rtyH4ck
 ---
 
 Tails es una distribución de Linux basada en Debian,cuyo proyecto fue lanzado el 23 de junio de 2009 y está específicamente desarrollada para proporcionar a los usuarios la máxima privacidad posible, haciendo que la navegación por Internet sea lo más anónima posible utilizando la red TOR (The Onion Router). Debido a la naturaleza del proyecto, esta constantemente liberando actualizaciones.  Ahora se ha lanzado la última versión Tails 3.6.2, con actualizaciones de seguridad críticas, por tanto, si usas este sistema operativo debes actualizar cuanto antes.
