--- a/_posts/2020-06-24-paquetes.md
+++ b/_posts/2020-06-24-paquetes.md
@@ -1,9 +1,9 @@
 ---
-title: "10mo Webinar Semanal PartyHack – Wandering hacking con Termux"
+title: "9no Webinar Semanal PartyHack – Generación y análisis de paquetes desde la perspectiva de la seguridad en redes"
 author: "PartyHack"
 ---
 
-Una vez mas los invitamos a un nuevo webinar semanal de nuestra comunidad PartyHack para el miercoles 1 de Julio a las 21:00 horas con nuestro charlista Rudy Pinochet con su tema: Wandering Hacking con Termux. Sigue la transmisión por nuestro canal de youtube: «PartyHack TV» y suscribete para que lo recuerdes.
+Los invitamos nuevamente a un nuevo webinar semanal de nuestra comunidad PartyHack para el día miércoles 24 de junio a las 21:00 horas con nuestro charlista: Daniel Sebastian Pacheco Pacheco con su tema: Generación y análisis de paquetes desde la perspectiva de la seguridad en redes. Sigue la transmisión en nuestro canal de youtube: «PartyHack TV» y suscribete para que lo recuerdes:
 
 ####Colaboradores:
 
