--- a/_posts/2018-04-21-owncloud.md
+++ b/_posts/2018-04-21-owncloud.md
@@ -14,11 +14,11 @@ El siguiente paso es instalar el ambiente web, para ello debemos contar con LAMP
 
 En el caso que no tengamos instalado LAMP, utilizaremos Tasksel ( es un gestor de aplicaciones que nos permite instalar software de manera rápida y sencilla.)
 
-```usuario@ubuntu$ sudo apt-get install tasksel```
+	usuario@ubuntu$ sudo apt-get install tasksel
 
 Una vez terminada la instalado tasksel,  comenzaremos con la instalación de LAMP.
 
-```usuario@ubuntu$sudo tasksel install lamp-server```
+	usuario@ubuntu$sudo tasksel install lamp-server
 
 Asignamos la contraseña del usuario «root» de Mysql.
 
@@ -26,44 +26,40 @@ Asignamos la contraseña del usuario «root» de Mysql.
 
 Una vez terminada este proceso, procederemos con la instalación de los componentes necesarios de php.
 
-```
-usuario@ubuntu$ sudo apt-get install -y apache2 mariadb-server libapache2-mod-php7.0 
-openssl php-imagick php7.0-common php7.0-curl php7.0-gd 
-php7.0-imap php7.0-intl php7.0-json php7.0-ldap php7.0-mbstring 
-php7.0-mcrypt php7.0-mysql php7.0-pgsql php-smbclient php-ssh2 
-php7.0-sqlite3 php7.0-xml php7.0-zip -y
-```
+
+	usuario@ubuntu$ sudo apt-get install -y apache2 mariadb-server libapache2-mod-php7.0 
+	openssl php-imagick php7.0-common php7.0-curl php7.0-gd 
+	php7.0-imap php7.0-intl php7.0-json php7.0-ldap php7.0-mbstring 
+	php7.0-mcrypt php7.0-mysql php7.0-pgsql php-smbclient php-ssh2 
+	php7.0-sqlite3 php7.0-xml php7.0-zip -y
+
 
 Para poder montar OwnCloud se requiere una base de datos en MySql, así que vamos a crearla con el siguiente comando:
-```
-usuario@ubuntu$ sudo mysql -u root -p
-```
-```
-usuario@ubuntu$ mysql>CREATE DATABASE owncloud;
-```
+
+
+	usuario@ubuntu$ sudo mysql -u root -p
+
+	usuario@ubuntu$ mysql>CREATE DATABASE owncloud;
+
 A continuación crearemos un usuario MySQL, en el cual se le deben asignar privilegios sobre la base de datos de OwnCloud, creada en el paso anterior. (sustituye user_owncloud y password. Por los que gustes)
-```
-mysql>GRANT ALL PRIVILEGES on owncloud.* to ‘useri_owncloud’@’localhost’ identified by ‘password.’;
-mysql>exit
-```
+
+
+	mysql>GRANT ALL PRIVILEGES on owncloud.* to ‘useri_owncloud’@’localhost’ identified by ‘password.’;
+	mysql>exit
 
 Una vez realizado el paso anterior, agregaremos los repositorios necesarios para Owncloud. (utilizaremos la última actualización disponible para ubuntu, la 10.0.7)
 
-```
-usuario@ubuntu$ sudo wget -nv https://download.owncloud.org/download/repositories/10.0.7/Ubuntu_16.04/Release.key sudo apt-key add – < Release.key sudo sh -c «echo ‘deb https://download.owncloud.org/download/repositories/10.0.7/Ubuntu_16.04/ /’ > /etc/apt/sources.list.d/owncloud.list»
-```
+	usuario@ubuntu$ sudo wget -nv https://download.owncloud.org/download/repositories/10.0.7/Ubuntu_16.04/Release.key sudo apt-key add – < Release.key sudo sh -c «echo ‘deb https://download.owncloud.org/download/repositories/10.0.7/Ubuntu_16.04/ /’ > /etc/apt/sources.list.d/owncloud.list»
+
 
 Ahora continuaremos con la instalación de Owncloud.
 
-```
-usuario@ubuntu$ sudo aptitude update sudo aptitude install owncloud-files -y
-```
+	usuario@ubuntu$ sudo aptitude update sudo aptitude install owncloud-files -y
+
 
 Terminado este paso, ya tenemos nuestro servidor de archivos disponible en la nube. Llegado a este punto,  solo nos falta crear un enlace simbólico, para poder acceder por primera vez.
 
-```
-usuario@ubuntu$ sudo ln -s /var/www/owncloud /var/www/html/owncloud
-```
+	usuario@ubuntu$ sudo ln -s /var/www/owncloud /var/www/html/owncloud
 
 ![IMAGEN](https://steemitimages.com/p/2r8F9rTBenJR3iqPxDrevHK3vDeQGnHc8Wj8C8nehR8tPN6zKR7emaf76knm6FCZVMKXMR37Ec3pbvLe8vtijdAYtoTYk4fkgdcVU2wBHdhDEYN76cTS4GmRn3Zh7mwaX?format=match&mode=fit)
 
@@ -75,9 +71,7 @@ Como podemos ver en este caso, debemos instalar varios módulos faltantes, proce
 
 Reiniciaremos el servicio de Apache y cargamos nuevamente a la página de inicio, ahora nos solicitará crear el usuario administrador y conectarlo con la BD creada anteriormente (en nuestro caso solo nos hacía falta reiniciar el apache)
 
-```
-usuario@ubuntu$ sudo service apache2 restart
-```
+	usuario@ubuntu$ sudo service apache2 restart
 
 A llegado el momento de iniciar sesion por primera vez en el sistema
 
