--- a/_posts/2018-04-21-owncloud.md
+++ b/_posts/2018-04-21-owncloud.md
@@ -49,7 +49,8 @@ A continuación crearemos un usuario MySQL, en el cual se le deben asignar privi
 
 Una vez realizado el paso anterior, agregaremos los repositorios necesarios para Owncloud. (utilizaremos la última actualización disponible para ubuntu, la 10.0.7)
 
-	usuario@ubuntu$ sudo wget -nv https://download.owncloud.org/download/repositories/10.0.7/Ubuntu_16.04/Release.key sudo apt-key add – < Release.key
+	usuario@ubuntu$
+	sudo wget -nv https://download.owncloud.org/download/repositories/10.0.7/Ubuntu_16.04/Release.key sudo apt-key add – < Release.key
 	sudo sh -c «echo ‘deb https://download.owncloud.org/download/repositories/10.0.7/Ubuntu_16.04/ /’ > /etc/apt/sources.list.d/owncloud.list»
 
 
