--- a/_posts/2018-04-21-owncloud.md
+++ b/_posts/2018-04-21-owncloud.md
@@ -1,6 +1,8 @@
 ---
 title: "Creando Nuestra propia Nube con OwnCloud"
 author: "Ciber46"
+header: 
+  teaser: "/assets/images/owncloud.png"
 ---
 
 En el  día de  hoy vamos aprender a crear nuestra propia nube, de esta manera podremos: administrar usuarios, asignar cuotas de espacios, editar nuestros documentos en linea con la suite ofimática, calendarios, y mucho mas. Todo gracias a esta herramienta Software libre llamado OwnCloud.
