--- a/_posts/2018-05-19-mist.md
+++ b/_posts/2018-05-19-mist.md
@@ -2,7 +2,7 @@
 title: "MISP (Malware Information Sharing Platform & Threat Sharing)"
 author: "PartyHack"
 header: 
-  teaser: "/assets/images/misp.png"
+  teaser: "/assets/images/post/2018/misp.png"
 ---
 
 ## Que es MISP
@@ -27,13 +27,13 @@ Definiremos que es Docker antes de instalar, es un proyecto de código abierto q
 
 	```thanatos@caronte:~$sudo curl –sSL https://get.docker.com | sh```
 
-	![MISP 1](/assets/images/misp1.jpg)
+	![MISP 1](/assets/images/post/2018/misp1.jpg)
 
 2. Una vez instalado docker, nos pedirá otorgar permisos al usuario y ejecutaremos el siguiente comando:
 	
 	```thanatos@caronte:~$sudo usermod  –aG docker thanatos```
 	
-	![MISP 2](/assets/images/misp2.jpg)
+	![MISP 2](/assets/images/post/2018/misp2.jpg)
 
 3. Terminada la instalación iniciamos Docker y continuamos con la instalacion de MISP con el siguiente comando:
 
@@ -52,7 +52,7 @@ Definiremos que es Docker antes de instalar, es un proyecto de código abierto q
 	
 	```thanatos@caronte:~$sudogit clone https://github.com/harvard-itsecurity/docker-misp.git```
 	
-	![MISP 3](/assets/images/misp3.jpg)
+	![MISP 3](/assets/images/post/2018/misp3.jpg)
 	
 	```thanatos@caronte:/misp$ cd docker-misp/```
 
@@ -60,19 +60,19 @@ Definiremos que es Docker antes de instalar, es un proyecto de código abierto q
 	
 	```thanatos@caronte:/misp/docker-misp$ sudo build.sh```
 	
-	![MISP 4](/assets/images/misp4.jpg)
+	![MISP 4](/assets/images/post/2018/misp4.jpg)
 
 8. Ahora modificaremos el archivo container
 	
 	```thanatos@caronte:/misp/docker-misp$ sudo vim container```
 
-	![MISP 5](/assets/images/misp5.jpg)
+	![MISP 5](/assets/images/post/2018/misp5.jpg)
 
 9. Ejecutamos el build, este proceso toma algunos minutos .
 	
 	```thanatos@caronte:/misp$ sudo ./build.sh```
 	
-	![MISP 6](/assets/images/misp6.jpg)
+	![MISP 6](/assets/images/post/2018/misp6.jpg)
 
 10. Una vez terminada la instalacion iniciaremos la base de datos para proceder con la utilización de MISP.
 
@@ -80,7 +80,7 @@ Definiremos que es Docker antes de instalar, es un proyecto de código abierto q
 	-v /docker/misp-db:/var/lib/mysql \
 	harvarditsecurity/misp /init-db```
 	
-	![MISP 7](/assets/images/misp7.jpg)
+	![MISP 7](/assets/images/post/2018/misp7.jpg)
 
 11. Ahora solo nos quedaarrancar el contenedor harvarditsecurity/misp
 
@@ -91,17 +91,17 @@ Definiremos que es Docker antes de instalar, es un proyecto de código abierto q
 	-v /docker/misp-db:/var/lib/mysql \
 	harvarditsecurity/misp```
 
-	![MISP 8](/assets/images/misp8.jpg)
+	![MISP 8](/assets/images/post/2018/misp8.jpg)
 
 12. Verificaremos que el contenedor este funcionando
 
 	```thanatos@caronte:/misp/docker-misp$ sudo docker ps -a```
 
-	![MISP 9](/assets/images/misp9.jpg)
+	![MISP 9](/assets/images/post/2018/misp9.jpg)
 
 13. Ingresamos la dirección https://localhost
 
-	![MISP 10](/assets/images/misp10.jpg)
+	![MISP 10](/assets/images/post/2018/misp10.jpg)
 
 14. Ingresaremos con las siguientes credenciales por defecto:
 
@@ -110,17 +110,17 @@ Definiremos que es Docker antes de instalar, es un proyecto de código abierto q
 
 15. Al ingresar observaremos un mensaje de alerta en rojo
 
-	![MISP 11](/assets/images/misp11.jpg)
+	![MISP 11](/assets/images/post/2018/misp11.jpg)
 
 	Para solucionarlo primero colocamos una nueva contraseña de administrador, luego debemos ingresar a la ruta Administration/Server Settings & Maintenance/ MISP/live y seleccionar «true» y le damos al ticket.
 
-	![MISP 12](/assets/images/misp12.jpg)
+	![MISP 12](/assets/images/post/2018/misp12.jpg)
 
 16. En la viñeta de administración podemos crear usuarios y definir roles.
 
-	![MISP 13](/assets/images/misp13.jpg)
+	![MISP 13](/assets/images/post/2018/misp13.jpg)
 
-	![MISP 14](/assets/images/misp14.jpg)
+	![MISP 14](/assets/images/post/2018/misp14.jpg)
 
 Con la creación de usuarios daremos por terminada la primera parte sobre instalación y puesta en marcha.
 En la próxima entrada veremos como utilizar la plataforma, uso de comandos, APIS, y integracion con otros dispositivos, pronto publicaremos la segunda parte amigos.
