--- a/_posts/2018-09-30-smishing.md
+++ b/_posts/2018-09-30-smishing.md
@@ -1,5 +1,5 @@
 ---
-title: "OWASP Secure Headers Project aplicado a WordPress"
+title: "¿Conoces qué es el smishing?"
 author: "Mario Urriola"
 header: 
   teaser: "/assets/images/post/2018/smishing.jpg"
