--- a/_posts/2018-09-30-smishing.md
+++ b/_posts/2018-09-30-smishing.md
@@ -7,7 +7,7 @@ header:
 
 ### Ahora te explicaré una técnica de ingeniería social, es más común de lo que crees.
 
-Nuestro deber como investigadores de seguridad es cuidar al eslabón más débil de la cadena, el usuario común y corriente. Luego de repetirles una y otra vez, **«No abran correos de fuentes desconocidas» o **«No descarguen archivos adjuntos«**, nos damos cuenta que los criminales usan nuevas tácticas para engañarlos.
+Nuestro deber como investigadores de seguridad es cuidar al eslabón más débil de la cadena, el usuario común y corriente. Luego de repetirles una y otra vez, **«No abran correos de fuentes desconocidas»** o **«No descarguen archivos adjuntos«**, nos damos cuenta que los criminales usan nuevas tácticas para engañarlos.
 
 El smishing es una de ellas, aunque se lleva aplicando hace unos años, no es tan conocida como el phishing de correo electrónico por lo que tiene más probabilidad de cumplir su objetivo. La técnica es sencilla, se le envía un mensaje de texto al usuario, de tal forma que éste ingrese a una página falsa y nos de sus credenciales.
 
