--- a/_posts/2019-09-06-q4-1837.wav.md
+++ b/_posts/2019-09-06-q4-1837.wav.md
@@ -2,7 +2,7 @@
 title: "CFT Q4 – 1837.wav"
 author: "PartyHack"
 header: 
-  teaser: "/assets/images/post/2020/invertir.jpg"
+  teaser: "/assets/images/ctf.png"
 ---
 
 
