--- a/404.md
+++ b/404.md
@@ -1,7 +1,6 @@
 ---
 permalink: /404.html
 ---
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -9,39 +8,51 @@ permalink: /404.html
     <title>Sitio en Construcción</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background-color: #f4f4f4;
-            color: #333;
+            font-family: Arial, sans-serif !important;
+            text-align: center !important;
+            padding: 50px !important;
+            background-color: #f4f4f4 !important;
+            color: #333 !important;
         }
 
         h1 {
-            color: #d9534f;
+            color: #d9534f !important;
         }
 
         p {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #777;
+            font-size: 18px !important;
+            line-height: 1.6 !important;
+            color: #777 !important;
         }
 
         img {
-            max-width: 100%;
-            height: auto;
-            margin-top: 20px;
+            max-width: 100% !important;
+            height: auto !important;
+            margin-top: 20px !important;
         }
 
         .social-links {
-            margin-top: 20px;
+            margin-top: 20px !important;
         }
 
         .social-links a {
-            display: inline-block;
-            margin: 0 10px;
-            text-decoration: none;
-            color: #333;
+            display: inline-block !important;
+            margin: 0 10px !important;
+            text-decoration: none !important;
+            color: #333 !important;
         }
+		
+		.masthead{
+			display: none !important;
+		}
+		
+		.skip-links{
+			display: none !important;
+		}
+		
+		.page__footer{
+			display: none !important;
+		}
     </style>
 </head>
 <body>
