--- a/404.md
+++ b/404.md
@@ -56,8 +56,7 @@ permalink: /404.html
     </style>
 </head>
 <body>
-    <h1>Sitio en Construcción</h1>
-    <p>Estamos trabajando para mejorar nuestro sitio web. ¡Volveremos pronto!</p>
+    <h1>Error inesperado</h1>
     <img src="/assets/images/error.jpg" alt="Sitio en Construcción">
 
     <div class="social-links">
