--- a/_posts/2018-05-19-mist.md
+++ b/_posts/2018-05-19-mist.md
@@ -3,6 +3,8 @@ title: "MISP (Malware Information Sharing Platform & Threat Sharing)"
 author: "PartyHack"
 header: 
   teaser: "/assets/images/post/2018/misp.png"
+categories:
+  - Tecnología
 ---
 
 ## Que es MISP
