--- a/_posts/2018-07-23-calendario-2018.md
+++ b/_posts/2018-07-23-calendario-2018.md
@@ -3,6 +3,8 @@ title: "Calendario de Eventos Ciberseguridad 2018"
 author: "PartyHack"
 header: 
   teaser: "/assets/images/post/2018/calendario.jpg"
+categories:
+  - Evento
 ---
 
 Yo al igual que varios pensaba que en Chile no se realizaban suficientes eventos de Ciberseguridad, pero haciendo una recopilación veo que este 2018 todo cambio.
