--- a/_posts/2018-09-30-smishing.md
+++ b/_posts/2018-09-30-smishing.md
@@ -3,6 +3,8 @@ title: "¿Conoces qué es el smishing?"
 author: "Mario Urriola"
 header: 
   teaser: "/assets/images/post/2018/smishing.jpg"
+categories:
+  - Ciberseguridad
 ---
 
 ### Ahora te explicaré una técnica de ingeniería social, es más común de lo que crees.
