--- a/_posts/2019-09-06-q4-paris.md
+++ b/_posts/2019-09-06-q4-paris.md
@@ -3,6 +3,8 @@ title: "CFT Q4 – Oh, Paris!"
 author: "PartyHack"
 header: 
   teaser: "/assets/images/ctf.png"
+categories:
+  - WriteUp
 ---
 
 Este es un desafió de Crypto del CTF Organizado por Q4 el 31 de Agosto del 2019
