--- a/_posts/2021-09-01-owasp-2021.md
+++ b/_posts/2021-09-01-owasp-2021.md
@@ -25,7 +25,7 @@ A continuación, se explicará brevemente las nuevas categorías:
 - A07: 2021-Identification and Authentication Failures anteriormente era una autenticación rota y se está deslizando hacia abajo desde la segunda posición, y ahora incluye CWE que están más relacionados con fallas de identificación. Esta categoría sigue siendo una parte integral del Top 10, pero la mayor disponibilidad de marcos estandarizados parece estar ayudando.
 - A08: 2021-Software and Data Integrity Failures es una nueva categoría para 2021, que se centra en hacer suposiciones relacionadas con actualizaciones de software, datos críticos y canalizaciones de CI / CD sin verificar la integridad. Uno de los impactos más ponderados de los datos del Common Vulnerability and Exposures / Common Vulnerability Scoring System (CVE / CVSS) asignados a los 10 CWE de esta categoría. R8: La deserialización insegura de 2017 ahora es parte de esta categoría más grande.
 - A09: 2021-Security Logging and Monitoring Failures fue anteriormente A10: 2017-Insufficient Logging & Monitoring y se agrega de la encuesta de la comunidad Top 10 (n. ° 3), avanzando desde el n. ° 10 anterior. Esta categoría se amplía para incluir más tipos de fallas, es difícil de probar y no está bien representada en los datos CVE / CVSS. Sin embargo, las fallas en esta categoría pueden afectar directamente la visibilidad, las alertas de incidentes y los análisis forenses.
-- A10: La falsificación de solicitudes del lado del servidor 2021 se agrega de la encuesta de la comunidad Top 10 (# 1). Los datos muestran una tasa de incidencia relativamente baja con una cobertura de pruebas por encima del promedio, junto con calificaciones por encima del promedio para el potencial de Explotación e Impacto. Esta categoría representa el escenario en el que los miembros de la comunidad de seguridad nos dicen que esto es importante, aunque no está ilustrado en los datos en este momento.
+- A10: 2021-Server-Side Requesr Forgery. La falsificación de solicitudes del lado del servidor 2021 se agrega de la encuesta de la comunidad Top 10 (# 1). Los datos muestran una tasa de incidencia relativamente baja con una cobertura de pruebas por encima del promedio, junto con calificaciones por encima del promedio para el potencial de Explotación e Impacto. Esta categoría representa el escenario en el que los miembros de la comunidad de seguridad nos dicen que esto es importante, aunque no está ilustrado en los datos en este momento.
 
 Para más información pueden visitar [Owasp.org](https://owasp.org/Top10/){:target="_blank"}
 
