--- a/_posts/2022-06-24-dns.md
+++ b/_posts/2022-06-24-dns.md
@@ -1,5 +1,5 @@
 ---
-title: "M4ul3 H4ck – Déjame ver la música"
+title: "M4ul3 H4ck – DNS"
 author: "Oscar Bravo"
 header: 
   teaser: "/assets/images/post/2022/maule.jpg"
