--- a/_posts/2021-11-01-knife.md
+++ b/_posts/2021-11-01-knife.md
@@ -1,5 +1,5 @@
 ---
-title: "Write Up - Knife"
+title: "HTB - Knife"
 author: "Oscar Bravo"
 header: 
   teaser: "/assets/images/post/2021/knife.png"
