--- a/_posts/2019-09-06-q4-paris.md
+++ b/_posts/2019-09-06-q4-paris.md
@@ -5,6 +5,9 @@ header:
   teaser: "/assets/images/ctf.png"
 categories:
   - WriteUp
+tags:
+  - Q4
+  - CTF
 ---
 
 Este es un desafió de Crypto del CTF Organizado por Q4 el 31 de Agosto del 2019
