--- a/_posts/2021-12-12-pikachu.md
+++ b/_posts/2021-12-12-pikachu.md
@@ -5,6 +5,9 @@ header:
   teaser: "/assets/images/post/2021/innovapolinav.png"
 categories:
   - Noticia
+tags:
+  - Innovapolinav
+  - CTF
 ---
 
 En este retro nos presentan una pagina web con la imagen de pikachu, quien nos habla en su particular lenguaje.
