--- a/_posts/2022-06-24-dns.md
+++ b/_posts/2022-06-24-dns.md
@@ -5,6 +5,9 @@ header:
   teaser: "/assets/images/post/2022/maule.jpg"
 categories:
   - WriteUp
+tags:
+  - MauleHack
+  - CTF
 ---
 
 Este reto lo único que nos dice es lo siguiente
