--- a/_posts/2022-06-24-facil.md
+++ b/_posts/2022-06-24-facil.md
@@ -5,6 +5,9 @@ header:
   teaser: "/assets/images/post/2022/maule.jpg"
 categories:
   - WriteUp
+tags:
+  - MauleHack
+  - CTF
 ---
 
 Este es el típico retro de bienvenida y nos entregan el siguiente JVEHWQTJGNXHMM3ONFSDA7I= usando nuestro amigo Cyberchef con la opción Magic obtenermos que es una base32 y la flag MH{Bi3nv3nid0}
