--- a/_posts/2022-06-24-open-mind.md
+++ b/_posts/2022-06-24-open-mind.md
@@ -5,6 +5,9 @@ header:
   teaser: "/assets/images/post/2022/maule.jpg"
 categories:
   - WriteUp
+tags:
+  - MauleHack
+  - CTF
 ---
 
 Este retro posee un rabbit hole, en primer lugar nos dan un archivo y nos dicen lo siguiente
