--- a/_posts/2021-01-18-passage.md
+++ b/_posts/2021-01-18-passage.md
@@ -8,14 +8,14 @@ categories:
 tags:
   - HTB
   - Maquina
+htb:
+  status: true
+  os: Linux
+  developer: ChefByzen
+  level: Medio
+  date: 05 Septiembre 2020
+  point: 30
 ---
-
-
-OS | LINUX
-Desarrollado por | ChefByzen
-Dificultad | Medio
-Liberación | 05 Septiembre 2020
-Puntos | 30
 
 ## Enumeración
 Al usar nmap utilizando nmap -sCV -A 10.10.10.206 solo encontramos que está abierto el 80 (web).
