--- a/_posts/2021-11-01-knife.md
+++ b/_posts/2021-11-01-knife.md
@@ -8,14 +8,14 @@ categories:
 tags:
   - HTB
   - Maquina
+htb:
+  status: true
+  os: Linux
+  developer: MrKN16H7
+  level: Fácil
+  date: 22 Mayo 2021
+  point: 20
 ---
-
-
-OS | LINUX
-Desarrollado por | MrKN16H7
-Dificultad | Fácil
-Liberación | 22 Mayo 2021
-Puntos | 20
 
 ## Enumeración
 
